objects/ssot__PartyAccreditation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccreditationIssuerName__c</fullName>
        <label>Accreditation Issuer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccreditationRating__c</fullName>
        <label>Accreditation Rating</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccreditationStatus__c</fullName>
        <label>Accreditation Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccreditationSubType__c</fullName>
        <label>Accreditation Sub Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccreditationType__c</fullName>
        <label>Accreditation Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__AccreditingBody__c</fullName>
        <label>Accrediting Body</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveFromDate__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveToDate__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Accreditation Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuingPartyId__c</fullName>
        <label>Issuing Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastFullSurveyDate__c</fullName>
        <label>Last Full Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__LastOnsiteSurveyDate__c</fullName>
        <label>Last Onsite Survey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ReceivingPartyId__c</fullName>
        <label>Receiving Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291144226_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyAccreditation_ReceivingPartyId__rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyAccreditation_ReceivingPartyId__rel</relationshipLabel>
        <relationshipName>rel_1720291144226_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1720291152126_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyAccreditation_IssuingPartyId_ma_rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyAccreditation_IssuingPartyId_ma_rel</relationshipLabel>
        <relationshipName>rel_1720291152126_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>